Added swagger doc for last five newsletters
